Standardize gRPC gathering with improved conflict detection and consolidated reporting. Revert Groc's narrow scan and dependency forces.
Co-authored-by: Junie <junie@jetbrains.com>